[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semopy"
version = "2.3.11"
description = "Structural Equation Modeling Optimization in Python."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Georgy Meshcheryakov", email = "iam@georgy.top" }]
maintainers = [{ name = "nigimitama", email = "nigimitama16@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.4",
    "scipy>=1.8",
    "sympy>=1.10",
    "statsmodels>=0.13",
    "numdifftools>=0.9.41",
    # not directly required, pinned to avoid a known vulnerability (Snyk)
    "scikit-learn>=0.24.2",
]

[project.urls]
Homepage = "https://semopy.com"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "flake8"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["semopy*"]

[tool.setuptools.package-data]
"*" = [
    "examples/*.csv",
    "examples/*.npy",
    "examples/*.txt",
    "report/*.html",
    "report/*.txt",
    "report/css/*.css",
    "report/js/*.js",
]
